# compiler-stuff

./: .gitignore  Brewfile
llvm/: Brewfile  Makefile  hello.ll
llvm-py/: Brewfile  pyproject.toml
llvm-py/llvm_py/: __main__.py  functions.py  header.py  module.py
llvm-rb/: Gemfile  Makefile  main.rb
llvm-rb/lib/: compiler.rb
llvm-rb/lib/compiler/: engine.rb  functions.rb  header.rb  module.rb  run.rb
llvm-rs/: Cargo.toml
llvm-rs/src/: main.rs
nasm/: Brewfile  Makefile  hello.asm
